# fellowship-of-the-enteRING

./: .env.example  .gitignore  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  .gitignore  Dockerfile  cleanup.py  pyproject.toml
backend/examples/: test.json
backend/src/pdfextractor/: __init__.py  api.py  cli.py  llm_client.py  main.py  models.py  pdf_parser.py  pipeline.py  settings.py
backend/src/pdfextractor/cache/: __init__.py  cache_key.py  cache_manager.py
backend/src/pdfextractor/heuristics/: __init__.py  registry.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: FeatureCard.tsx  Header.tsx  ResultsDisplay.tsx  UploadZone.tsx
frontend/src/pages/: Index.tsx
